teams/team-andrew/manifests/restrict-ingress-egress-andrew.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-ingress-egress-andrew
  namespace: team-andrew
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: team-young
    ports:
    - protocol: TCP
      port: 80
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: team-young
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
